--- a/Manifest-file/deployment-service.yml
+++ b/Manifest-file/deployment-service.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: tetris
-        image: sreedhar8897/tetris-project:latest
+        image: sreedhar8897/tetris-project:4
         ports:
         - containerPort: 3000
 ---
